--- a/about.html
+++ b/about.html
@@ -1,21 +1,22 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9NWTQJ2DTJ"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
         gtag('config', 'G-9NWTQJ2DTJ');
     </script>
-    
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
     <title>About | sOm</title>
-	<link rel="icon" type="image/x-icon" href="imgs/column.png">
+    <link rel="icon" type="image/x-icon" href="imgs/column.png">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -30,32 +31,44 @@
     </div>
 
     <div class="about">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ID7yMuA0lRM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>ABOUT</p>
-        <p>
-            <a>search <Strong>O</Strong> more</a> is a custom-made search instrument for 3d models,
-            textures and images ready to be imported to your favorite 3d software, like
-            <a href="https://www.blender.org" target="_blank">Blender</a>. It implements AI modeling techniques to seamlessly
-            search for assets from <a href="https://www.blenderkit.com" target="_blank">Blenderkit</a>,
-            <a href="https://sketchfab.com" target="_blank">Sketchfab</a>, <a href="https://quixel.com/megascans" target="_blank">Megascans</a>
-            and more.
-        </p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ID7yMuA0lRM" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         <p class="italica">
             How to construct an architectural image in an era of freely available 3d assets, open-source
             software and YouTube tutorials? What challenges does this novel condition present to
             architectural education and practice?
         </p>
         <p>
-            <a>search <strong>O</strong> more</a> is a research project developed by <a href="https://digitalpentecost.online" target="_blank">Jorge Orozco</a>
-            and <a href="https://miro.romanvlahovic.com/daruber/" target="_blank">Miro Roman</a> from the <a href="https://www.youtube.com/channel/UCa282qZMpJyvoyRPTF8zPiQ" target="_blank">House of Coded Objects</a>,
-            UIBK's Institute für Gestaltung <a href="https://www.studio2uibk.org" target="_blank">Studio2</a>, in collaboration with
-            <a href="https://themapandtheterritory.com" target="_blank">Adil Bokhari</a> from the <a href="https://www.caad.arch.ethz.ch" target="_blank">Chair for Digital Architectonics</a> at ETHZ.
+            <a href="index.html">search <strong>O</strong> more</a> is a custom-made search instrument for 3d models,
+            textures and images ready to be imported to your favorite 3d software, like
+            <a href="https://www.blender.org" target="_blank">Blender</a>. It implements AI modeling techniques to
+            seamlessly search for assets from <a href="https://www.blenderkit.com" target="_blank">Blenderkit</a>,
+            <a href="https://sketchfab.com" target="_blank">Sketchfab</a> and <a href="https://quixel.com/megascans"
+                target="_blank">Megascans</a>.
         </p>
         <p>
-            Watch <a>search <strong>O</strong> more</a> acting in studio <a href="https://0more.net" target="_blank">O-More</a> and <a href="https://www.meteora.ch" target="_blank">Meteora</a>, and visit its sibling apps
-            <a href="https://ask.alice-ch3n81.net" target="_blank">ask.alice🌸</a>, <a href="https://panoramasofcinema.ch" target="_blank">Panoramas of Cinema🍿</a>
-            and <a href="https://mark.digitalpentecost.online" target="_blank">MARK🖍</a>.
+            <a href="index.html">search <strong>O</strong> more</a> is a research project developed by <a
+                href="https://digitalpentecost.online" target="_blank">Jorge Orozco</a>
+            and <a href="https://miro.romanvlahovic.com/daruber/" target="_blank">Miro Roman</a> from the <a
+                href="https://www.youtube.com/channel/UCa282qZMpJyvoyRPTF8zPiQ" target="_blank">House of Coded
+                Objects</a>,
+            UIBK's Institute für Gestaltung <a href="https://www.studio2uibk.org" target="_blank">Studio2</a>, in
+            collaboration with
+            <a href="https://themapandtheterritory.com" target="_blank">Adil Bokhari</a> from the <a
+                href="https://www.caad.arch.ethz.ch" target="_blank">Chair for Digital Architectonics</a> at ETHZ.
+        </p>
+        <p>
+            Watch <a href="index.html">search <strong>O</strong> more</a> acting in studio <a href="https://0more.net"
+                target="_blank">OMore</a> and <a href="https://www.meteora.ch" target="_blank">Meteora</a>, visit
+            its sibling apps
+            <a href="https://ask.alice-ch3n81.net" target="_blank">ask.alice🌸</a>, <a
+                href="https://panoramasofcinema.ch" target="_blank">Panoramas of Cinema🍿</a>
+            and <a href="https://oma.marksearch.online" target="_blank">Mark<label
+                    style="font-size: 0.9em;">🖍</label></a>, or become a contributor on <a
+                href='https://github.com/panoramasofcinema/search-0more' target='_blank'>GitHub</a>.
         </p>
     </div>
 </body>
+
 </html>
